# Numstore

./: .clang-format  .gitignore  .valgrindrc  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DAILY.md  Makefile  README.md  asan_suppress.txt  block_array_forward.h  codecov.yml  fake_database.c  fake_database.h  note  nsdb_forward.h  proposal  pyproject.toml  swarm.c  swarm_test.c  swarm_test.h  valgrind_suppress.txt
apps/: CMakeLists.txt  cgd_swarm_test.c  dlread.c  irwr_swarm_test.c  nscli.c  nspprint.c  numstore.c  register_test_suite.h  simple_nspprint.c  test.c  unit_tests.c  walfprint.c
apps/samples/smartfiles/: sample1_basic_crud.c  sample5_rollback_commit.c
apps/samples/smfile/: sample1_basic_crud.c  (+1 more)
apps/scripts/: add_copywrite.py  format_code.sh  replstr.py
apps/testing/: CMakeLists.txt  cgd_swarm_test.c  irwr_swarm_test.c  unit_tests.c
apps/tools/: CMakeLists.txt  dlread.c  nspprint.c  simple_nspprint.c
bindings/python/: CMakeLists.txt
docs/: CMakeLists.txt  algorithms.md  building.md  conf.py  developing.md  index.md  index.rst  intro.rst  numstore_language_spec.md  paper.txt  quick_start.md  smart_files.md  what_is_numstore.md
docs/blog/: language_spec.md
docs/pandoc/: _sidebar.html  style.css  template.html
docs/reference/: smfile_open.md  template.md
libs/c_specx/: CMakeLists.txt
libs/nscore/: CMakeLists.txt
libs/nstesting/: CMakeLists.txt
libs/numstore/: CMakeLists.txt
libs/pynumstore/: CMakeLists.txt  module.c  pyproject.toml
libs/smartfiles/: CMakeLists.txt  README.md
samples/: CMakeLists.txt
samples/docs/: index.rst
samples/numstore/: CMakeLists.txt  sample1_basic_crud.c  sample1_numstore_basic_crud.c
samples/pynumstore/: basic_operations.py  close_reopen.py  multiple_variables.py  sample_1_basic_operations.py  sample_2_transactions.py  sample_3_multiple_variables.py  sample_4_overwriting.py  sample_5_close_reopen.py  transactions.py
samples/smfile/: CMakeLists.txt  sample1_basic_crud.c  sample1_smartfile_basic_crud.c  sample2_smartfile_transactions.c  sample2_transactions.c  sample3_smartfile_stride.c  sample3_stride.c  sample4_smartfile_variable_names.c  sample4_variable_names.c  sample5_rollback_commit.c  sample5_smartfile_rollback_commit.c
src/: CMakeLists.txt  _numstore.h  alloc.c  alloc.h  aries_tests.c  ast.h  byte_accessor.c  c_specx.h  cbuffer.c  cgd_swarm_test_fixture.c  chunk_alloc.c  collections.c  collections.h  compile_config.h  compiler.c  compiler.h  concurrency.c  concurrency.h  csx_assert.h  dbl_buffer.c  deserializer.c  dirty_page_table.c  dirty_page_table.h  dpgt_concurrency_tests.c  error.c  error.h  ext_array.c  file_pager.c  file_pager.h  filenames.c  fpool.c  fpool.h  gr_lock.c  hashing.c  htable.c  htable.h  irwr_swarm_test_fixture.c  irwr_swarm_test_fixture.h  kvt_list_builder.c  kvt_ref_list_builder.c  (+94 more)
src/apps/: CMakeLists.txt  numstore.c
src/c_specx/: alloc.h  block_array.h  bounds.h  byte_accessor.h  bytes.h  cbuffer.h  data_validator.h  data_writer.h  deserializer.h  file_system.h  gr_lock.h  hash_table.h  ht_models.h  lalloc.h  logging.h  malloc_plan.h  math.h  random.h  stdtypes.h  stride.h  string.h  testing.h
src/docs/: md-links.lua  style.css  template.html
src/nscore/: dirty_page_table.h  errors.h  file_pager.h  lock_table.h  lt_lock.h  multi_user_stride.h  nshandle.h  pager.h  prim.h  tokens.h  txn.h  txn_table.h  type.h  types.h  var.h  variables.h  wal.h  wal_diff.h  wal_istream.h  wal_ostream.h  wal_rec_hdr.h
src/nshandle/: nshandle.c  nshandle_begin.c  nshandle_close.c  nshandle_commit.c  nshandle_crash.c  nshandle_new_context.c  nshandle_open.c  nshandle_rollback.c
src/pager/: ns_init_var_hash_map.c  page_fixture.c  pager.c  pgr_begin_txn.c  pgr_cancel.c  pgr_close.c  pgr_commit.c  pgr_delete_and_release.c  pgr_delete_single_file.c  pgr_deletion_blocking_checkpoint.c  pgr_evict.c  pgr_extend_file.c  pgr_flush.c  pgr_get.c  pgr_get_writable.c  pgr_launch_checkpoint_thread.c  pgr_mt_test.c  pgr_new.c  pgr_open.c  pgr_release_with_log.c  pgr_reserve_and_ctrl_lock.c  pgr_restart.c  pgr_restart_analysis.c  pgr_restart_redo.c  pgr_restart_undo.c  pgr_rollback.c  pgr_unfix.c
src/pages/: data_list.c  data_list.h  fsm_page.c  fsm_page.h  inner_node.c  inner_node.h  inner_node_testing.h  page.c  page.h  page_delegate.h  var_hash_page.c  var_hash_page.h  var_page.c  var_page.h  var_tail.c  var_tail.h
src/parsers/: multi_user_stride.c  multi_user_stride_parser.c  query_parser.c  subtype.c  subtype_parser.c  type_parser.c  type_ref_parser.c  user_stride.c  user_stride_parser.c
src/posix/: file.c  mutex.c  os.c
src/rope/: ns_balance_and_release.c  ns_insert.c  ns_read.c  ns_rebalance.c  ns_remove.c  ns_rptree_valid.c  ns_seek.c  ns_write.c
src/scripts/: format_code.py  funcs.py  lcov_worst.py  replstr.py
src/templates/: compile_config.h.in  numstore.pc.in  numstoreConfig.cmake.in  unit_tests.h.in
src/testing/: aries_tests.c  cgd_swarm_test_fixture.c  cgd_swarm_test_fixture.h  core_extra_tests.c  data_validator.c  dirty_page_table_tests.c  dpgt_concurrency_tests.c  inner_node_testing.c  inner_node_testing.h  irwr_swarm_test_fixture.c  irwr_swarm_test_fixture.h  mem_vhmap.c  mem_vhmap.h  numstore_regression_tests.c  numstore_tests.c  page_fixture.c  page_fixture.h  robin_hood_ht_tests.c  smfile_data_writer.c  smfile_test_fixture.h  test_commands.txt  testing.c  testing.h  txnt_concurrency_tests.c  unit_tests.h  wal_tests.c
src/testing_only/: cgd_swarm_test_fixture.c  core_extra_tests.c  data_validator.c  data_validator.h  dirty_page_table_tests.c  dpgt_concurrency_tests.c  inner_node_testing.c  irwr_swarm_test_fixture.c  mem_vhmap.c  numstore_regression_tests.c  page_fixture.c  robin_hood_ht_tests.c  smfile_data_writer.c  smfile_test_fixture.h  testing.c  txnt_concurrency_tests.c  unit_tests.h
src/tools/: nspprint.c
src/var/: ns_find_var_page.c  ns_read_var_page.c  ns_var_create.c  ns_var_delete.c  ns_var_get.c  ns_var_get_or_create.c  ns_var_update.c  ns_write_var_page.c
src/windows/: cond.c  mutex.c  os.c  rwlock.c  timer.c
(+692 files in other folders)
