[build-system]
requires = ["scikit-build-core>=0.8.0", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "pynumstore"
dynamic = ["version"]
description = "Python interface for the numerical database"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.8"
dependencies = ["numpy"]
authors = [
  {name = "Theo Lincke", email = "lincketheo.dev@gmail.com"}
]
maintainers = [
  {name = "Theo Lincke", email = "lincketheo.dev@gmail.com"}
]
keywords = ["database", "numerical", "timeseries", "storage"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Database",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/lincketheo/Numstore"
Repository = "https://github.com/lincketheo/Numstore"
Issues = "https://github.com/lincketheo/Numstore/issues"
Changelog = "https://github.com/lincketheo/Numstore/blob/main/CHANGELOG.md"
Documentation = "https://github.com/lincketheo/Numstore/blob/main/README.md"

[tool.scikit-build]
cmake.version = ">=3.18"
cmake.source-dir = "."
wheel.packages = ["bindings/python/pynumstore/pynumstore"]
cmake.args = [
    "-DENABLE_NDEBUG:BOOL=ON",
    "-DENABLE_NTEST:BOOL=ON",
    "-DENABLE_NLOG:BOOL=ON",
    "-DENABLE_GPROF:BOOL=OFF",
    "-DENABLE_PORTABLE:BOOL=ON",
    "-DENABLE_STRIP:BOOL=ON",
    "-DENABLE_ASAN:BOOL=OFF",
    "-DENABLE_LEAK_TOOL:BOOL=OFF",
    "-DBUILD_TOOLS:BOOL=OFF",
    "-DBUILD_PYTHON_BINDINGS:BOOL=ON",
    "-DBUILD_NUMSTORE_SAMPLES:BOOL=OFF",
    "-DBUILD_SMARTFILE_SAMPLES:BOOL=OFF"
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "version.txt"
regex = '(?P<value>[0-9.]+)'

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
test-requires = ["pytest", "pytest-subtests"]
test-command = "pytest {project}/bindings/python/pynumstore/tests"
